--- a/js/pages/card/card-withdraw.html
+++ b/js/pages/card/card-withdraw.html
@@ -41,6 +41,6 @@
             <!-- 可提现次数 n 次 -->
         </div>
     </div>
-    <div class="bs-text-x-smaller bs-text-153" style="position: absolute;bottom: 0;padding: 10px 20px;">
+    <div class="bs-text-x-smaller bs-text-gray" style="position: absolute;bottom: 0;padding: 10px 20px;">
     每月可提现次数为1次，每次提现金额不能少于60元<br>提现金额会在3～5个工作日到账</div>
 </div>
