--- a/js/pages/cms/account.html
+++ b/js/pages/cms/account.html
@@ -1,5 +1,5 @@
 <article class="bs-bg-white bs-text-51" ms-controller="account">
-    <div style="padding: 9px 20px;padding-top: 12px;border-bottom: 1px solid #ddd;">账户余额：<span class="bs-text-red">{{amount}}</span> 元</div>
+    <div style="padding: 9px 20px;padding-top: 12px;border-bottom: 1px solid #ddd;">账户余额：<span class="bs-text-fdd942">{{amount}}</span> 元</div>
     <section class="cms-account" style="min-height: 80vh;">
         <div class="bs-text-larger">提现帐号</div>
         <div class="bs-text-white cms-account-head" ms-class-1="zfb:cashAccount.accountType==1" ms-class-2="bank:cashAccount.accountType==2" ms-if="cashAccount.accountType">
@@ -20,7 +20,7 @@
                 <div class="bs-text-smaller" style="line-height: 15px;">{{cashAccount.accountName}}</div>
             </div>
         </div>
-        <div ms-if="!cashAccount.accountType" class="bs-text-153 bs-text-smaller" style="background-color: #ddd;margin: 15px 0 10px 0;padding: 25px 15px;" ms-click="goBind">
+        <div ms-if="!cashAccount.accountType" class="bs-text-gray bs-text-smaller" style="background-color: #ddd;margin: 15px 0 10px 0;padding: 25px 15px;" ms-click="goBind">
             您还未绑定提现帐号
             <img src="../img/add.svg" style="width: 30px;position: relative;float: right;top: -4px;">
         </div>
@@ -34,14 +34,14 @@
                         <span class="bs-text-smaller bs-text-gray bs-text-x-smaller">{{el.createTime}}</span>
                     </div>
                     <div class="today-list-item" style="line-height: 43px;">
-                        <span ms-if="el.type==1" class="bs-text-large bs-text-red">+</span>
+                        <span ms-if="el.type==1" class="bs-text-large bs-text-fdd942">+</span>
                         <span :ms-if="el.type!=1" class="bs-text-large bs-text-green">-</span> {{el.amount}}
                     </div>
                 </div>
             </div>
         </div>
         
-        <div class="bs-text-gold bs-text-smaller" style="width: 100%;text-align: center;padding: 10px;position: fixed;bottom: 0;left: 0;background: #fff;z-index:99">
+        <div class="bs-text-graybs-text-smaller" style="width: 100%;text-align: center;padding: 10px;position: fixed;bottom: 0;left: 0;background: #fff;z-index:99">
             <button class="bs-text-white bs-bg-black" style="width: 100%;" ms-click="openWithdraw">提现</button>
         </div>
     </section>
