--- a/js/pages/cms/donation.html
+++ b/js/pages/cms/donation.html
@@ -36,12 +36,12 @@
 <div ms-controller="donation">
     <div class="bs-text-small bs-bg-white donation-head">
         <div style="flex-grow: 1;">
-            <span class="bs-text-red">{{data.amount}}</span>元
+            <span class="bs-text-fdd942">{{data.amount}}</span>元
             <br> 已获捐赠
         </div>
         <div style="border-left: 1px solid #eee;"></div>
         <div style="flex-grow: 1;">
-            <span class="bs-text-red">{{data.number}}</span>人
+            <span class="bs-text-fdd942">{{data.number}}</span>人
             <br> 累计捐赠
         </div>
     </div>
@@ -58,7 +58,7 @@
                     {{el.user.name}}
                 </div>
                 <div class="bs-text-smaller">
-                    累计捐赠<span class="bs-text-red">{{el.sumAmount}}</span>元
+                    累计捐赠<span class="bs-text-fdd942">{{el.sumAmount}}</span>元
                 </div>
             </div>
         </div>
