--- a/js/pages/cms/favoreeList.html
+++ b/js/pages/cms/favoreeList.html
@@ -1,7 +1,7 @@
 <section ms-controller="favoreeList">
     <div class="bs-bg-white bs-text-small cms-head-row">
         <div class="flex1">
-            已资助<span class="bs-text-red">{{num}}</span>人
+            已资助<span class="bs-text-fdd942">{{num}}</span>人
         </div>
         <img class="flex0" src="../img/commonweal/add.png" alt="" style="width: 36px;" ms-click="goAdd">
     </div>
