--- a/js/pages/cms/nav.html
+++ b/js/pages/cms/nav.html
@@ -51,7 +51,7 @@
             捐款总金额
         </div>
         <div class="item-text">
-            <span class="bs-text-red">{{accountData.totalDonateAmount}}</span> 元
+            <span class="bs-text-fdd942">{{accountData.totalDonateAmount}}</span> 元
         </div>
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
@@ -60,7 +60,7 @@
             账户余额
         </div>
         <div class="item-text">
-            <span class="bs-text-red">{{accountData.cashAmount}}</span> 元
+            <span class="bs-text-fdd942">{{accountData.cashAmount}}</span> 元
         </div>
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
@@ -69,7 +69,7 @@
             受益学生
         </div>
         <div class="item-text">
-            <span class="bs-text-red">{{accountData.numberStudent}}</span> 个
+            <span class="bs-text-fdd942">{{accountData.numberStudent}}</span> 个
         </div>
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
@@ -78,7 +78,7 @@
             子账户
         </div>
         <div class="item-text">
-            <span class="bs-text-red">{{accountData.numberAccount}}</span> 个
+            <span class="bs-text-fdd942">{{accountData.numberAccount}}</span> 个
         </div>
         <img src="../img/icon/right-arrow.svg" class="arrow">
     </div>
