--- a/js/pages/hotel/hotelIntroduction.html
+++ b/js/pages/hotel/hotelIntroduction.html
@@ -14,7 +14,7 @@
     <section>
         <div>
             <img src="img/icon/tel.png" alt="" style="width: 22px;position: relative;top: 3px;">&nbsp;
-            <a class="bs-text-gold bs-text-large" ms-attr-href="'tel:' + tel">{{tel}}</a>
+            <a class="bs-text-graybs-text-large" ms-attr-href="'tel:' + tel">{{tel}}</a>
         </div>
     </section>
 
