--- a/js/pages/index/index.html
+++ b/js/pages/index/index.html
@@ -218,7 +218,7 @@
                     <div class="swiper-container swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide swiper-no-swiping" style="background-color: transparent;" ms-repeat="greetList" data-repeat-rendered="greetSwiper">
-                                <div class="bs-text-smaller bs-text-169488" style="line-height: 32px;width: 100%;text-align: right;margin-right: 5px;">
+                                <div class="bs-text-smaller bs-text-fdd942" style="line-height: 32px;width: 100%;text-align: right;margin-right: 5px;">
                                     {{el.name}}
                                 </div>
                             </div>
