--- a/js/pages/index/searchLocation.html
+++ b/js/pages/index/searchLocation.html
@@ -50,14 +50,14 @@ hr {
         </div>
         <section class="search-location" ms-click="getCurrentPosition">
             <span class="mui-icon mui-icon-location"></span>&nbsp;
-            <span class="bs-text-small bs-text-153" style="display: inline-block;">定位当前位置</span>
+            <span class="bs-text-small bs-text-gray" style="display: inline-block;">定位当前位置</span>
             <div class="bs-text-small bs-text-black" style="margin: 15px 0 0 32.5px;">
                 {{currentLocation}}
             </div>
         </section>
         <hr>
         <section class="search-panel" style="padding: 20px 0 0;">
-            <span class="bs-text-small bs-text-153">酒店推荐</span>
+            <span class="bs-text-small bs-text-gray">酒店推荐</span>
             <div class="bs-text-small bs-text-black" style="margin: 15px 0 0 32.5px;">
                 上海迪斯尼店
             </div>
@@ -82,7 +82,7 @@ hr {
         </div>
         <hr>
         <section class="search-panel" style="padding: 20px 0 0; text-align: left;">
-            <span class="bs-text-small bs-text-153">酒店推荐</span>
+            <span class="bs-text-small bs-text-gray">酒店推荐</span>
             <div class="bs-text-small bs-text-black" style="margin: 10px 0;">
                 上海迪斯尼店
             </div>
