--- a/js/pages/invite/inviteToUser.html
+++ b/js/pages/invite/inviteToUser.html
@@ -3,7 +3,7 @@
         <div class="bs-text-normal" style="margin-top: 20px;">
             你会获得¥{{userFundInvitee.money}}体验基金，<br>{{inviter.name}}也会获得¥{{userFundInviter.money}}体验基金。
         </div>
-        <div class="bs-bg-gold bs-text-white" style="width: 70vw;margin: 10px auto;font-weight: lighter;">
+        <div class="bs-bg-graybs-text-white" style="width: 70vw;margin: 10px auto;font-weight: lighter;">
             ¥<span class="bs-text-xxx-larger" style="line-height: 70px;">{{userFundInvitee.money}}</span>
         </div>
         <div class="bs-text-smaller">
