--- a/js/pages/invite/inviteToVip.html
+++ b/js/pages/invite/inviteToVip.html
@@ -41,7 +41,7 @@
       <img src="img/inviteToVipPlane.png" class="plane" alt="">
     </div>
     <img ms-attr-src="urlAPINet+data.headUrl" onerror="javascript:this.src=defaultHeadImg" alt="" style="width: 75px;margin:16vh auto 20px auto;border-radius: 50%;">
-    <div style="text-align: center;font-size: 18px;" class="bs-text-gold bs-text-bolder">
+    <div style="text-align: center;font-size: 18px;" class="bs-text-graybs-text-bolder">
       {{data.nickname||data.name}}邀请您成为本宿VIP会员
     </div>
     <div style="display: flex;justify-content: center;align-items: center;margin-top: 30px;">
