--- a/js/pages/lottery/prizeModal.html
+++ b/js/pages/lottery/prizeModal.html
@@ -17,6 +17,6 @@
 
     <section style="display: flex;justify-content: space-around;">
         <button class="bs-bg-yellow modal-btn" type="button" id="closeBtn" ms-click="modalClose">知道了</button>
-        <button class="bs-bg-red modal-btn" type="button" ms-click="goLog()">去看看</button>
+        <button class="bs-bg-fdd942 modal-btn" type="button" ms-click="goLog()">去看看</button>
     </section>
 </div>
