--- a/js/pages/service/shop.html
+++ b/js/pages/service/shop.html
@@ -70,7 +70,7 @@
                                     <button type="button" class="line" style="background-image: url(img/line.png);">
                                 </li>
                             </ul>
-                            <div class="bs-text-small bs-text-153 intro">{{dl.intro}}</div>
+                            <div class="bs-text-small bs-text-gray intro">{{dl.intro}}</div>
                         </div>
                     </div>
                 </div>
