--- a/js/util/card-select.html
+++ b/js/util/card-select.html
@@ -17,7 +17,7 @@
         </div>
         <div style="text-align: left;">
             <div style="padding: 20px 0 15px 0;border-top: 1px solid #ccc;" ms-repeat="cardList" ms-click="select($index, el.id)">
-                <div class="bs-text-normal" ms-class="bs-text-153: el.cashAmount<(vmOrder.needAmount*vmOrder.discount)">
+                <div class="bs-text-normal" ms-class="bs-text-gray: el.cashAmount<(vmOrder.needAmount*vmOrder.discount)">
                     使用本宿{{el.userBuyCard.name}}支付
                     <br>
                     <span class="bs-text-smaller">
