--- a/js/pages/assess/assess.html
+++ b/js/pages/assess/assess.html
@@ -85,7 +85,7 @@
         <div class="mui-text-center bs-text-smaller" ms-repeat="assessList">
             <div style="text-align: left;margin: 0 20px;">
                 <br>
-                <div class="bs-text-153" style="text-align: left;font-weight: 300;display: inline;margin-right: 10px;">
+                <div class="bs-text-gray" style="text-align: left;font-weight: 300;display: inline;margin-right: 10px;">
                     {{el.user.name || el.user.mobile}}
                 </div>
                 <span ms-class-1="isValid:el.s>=1" ms-class-2="noValid:el.s<1">★</span>
