--- a/js/pages/card/log.html
+++ b/js/pages/card/log.html
@@ -20,7 +20,7 @@
             <div class="bs-text-smaller" style="line-height: 15px;">{{@data.accountName}}</div>
         </div>
     </div>
-    <div :visible="!@data.accountType" class="bs-text-153 bs-text-smaller" style="background-color: #ddd;margin: 15px 0 10px 0;padding: 25px 15px;" :on-tap="@goBind">
+    <div :visible="!@data.accountType" class="bs-text-gray bs-text-smaller" style="background-color: #ddd;margin: 15px 0 10px 0;padding: 25px 15px;" :on-tap="@goBind">
         您还未绑定提现帐号
         <img src="img/add.svg" style="width: 30px;position: relative;float: right;top: -4px;" alt="" :on-tap="@goBind">
     </div>
@@ -36,7 +36,7 @@
                     <span class="bs-text-smaller bs-text-gray bs-text-x-smaller">{{el.createTime}}</span>
                 </div>
                 <div class="today-list-item" style="line-height: 43px;">
-                    <span :visible="el.type==1" class="bs-text-large bs-text-red">+</span>
+                    <span :visible="el.type==1" class="bs-text-large bs-text-fdd942">+</span>
                     <span :visible="el.type!=1" class="bs-t
                     ext-large bs-text-green">-</span>
                     {{el.amount}}
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <div class="bs-text-gold bs-text-smaller" style="width: 102%;text-align: center;margin-left: -7vw;padding-top: 15px;position: fixed;bottom: -1vh;background: #fff;z-index:99">
+    <div class="bs-text-graybs-text-smaller" style="width: 102%;text-align: center;margin-left: -7vw;padding-top: 15px;position: fixed;bottom: -1vh;background: #fff;z-index:99">
         <div>客服电话: {{@SERVICECALL}}</div>
         <button :click="@goWeal()" style="background-color: black;color: white;z-index: 11;width: 100%; height: 49px; margin-top: 15px;font-size: 18px;">公益捐赠</button>
     </div>
