--- a/js/pages/cms/subList.html
+++ b/js/pages/cms/subList.html
@@ -24,7 +24,7 @@
 <section ms-controller="subList">
     <div class="bs-bg-white bs-text-small cms-head-row">
         <div class="flex1">
-            已有子账户<span class="bs-text-red">{{num}}</span>人
+            已有子账户<span class="bs-text-fdd942">{{num}}</span>人
         </div>
         <img class="flex0" src="../img/commonweal/add.png" alt="" style="width: 36px;" ms-click="goAdd">
     </div>
