--- a/js/pages/order/newOrderList.html
+++ b/js/pages/order/newOrderList.html
@@ -72,7 +72,7 @@
     <div style="background-color: #fff;">
         <span class="order-title order-ud bs-text-x-larger" style="margin-left: 30px;margin-top: 24px;font-weight: bold;color: #444444;">您当前的订单</span>
         <ul class="order-list" style="margin-bottom: 0px;">
-            <li class="order-item bs-text-large bs-text-153" style="margin-top: 0px;margin-left: 21px;margin-right: 21px;" ms-if="list1.length == 0">暂无订单
+            <li class="order-item bs-text-large bs-text-gray" style="margin-top: 0px;margin-left: 21px;margin-right: 21px;" ms-if="list1.length == 0">暂无订单
             </li>
             <li class="order-item status" style="position:relative;padding-bottom: 15px;margin-right: 30px;margin-left: 22px;margin-top: -5px;" ms-repeat="list1" ms-if="list1.length!=0">
                 <span class="bs-text-smaller bs-text-51" style="display: inline-block; margin: 10px 0 5px 0;">订单号：{{el.orderNo}}</span>
@@ -99,7 +99,7 @@
     <div style="background-color: #fff;margin-top: 16px;">
         <span class="order-title" style="margin: 20px 0 10px 10px;margin-left: 30px;font-weight: bold;font-size: 18px;color: #444444;">你的历史订单:</span>
         <ul class="order-list" style="margin-bottom: 0px;background-color: #fff;">
-            <li class="order-item bs-text-large bs-text-153" style="margin-top: 10px;margin-left: 21px;margin-right: 21px;" ms-if="list1.length == 0">暂无订单
+            <li class="order-item bs-text-large bs-text-gray" style="margin-top: 10px;margin-left: 21px;margin-right: 21px;" ms-if="list1.length == 0">暂无订单
             </li>
             <li class="order-item status" style="position:relative;padding-bottom: 15px;background-color:#EEEEEE;margin-left: 30px;margin-right: 30px;" ms-repeat="list2" ms-if="list2.length!=0" ms-click="goDetail(el.id)">
                 <span class="status bs-text-smaller bs-text-white">{{showStatus(el.status)}}</span>
@@ -119,7 +119,7 @@
                     </span>
                 </h5>
                 <button class="bs-text-small" type="button" ms-if="!(el.status==4&&el.iscomment==1)" ms-click="goDetail(el.id)">{{showActionText(el.status)}}</button>
-                <span class="bs-text-large bs-text-red order-money">¥{{el.needAmount}}</span>
+                <span class="bs-text-large bs-text-fdd942 order-money">¥{{el.needAmount}}</span>
             </li>
         </ul>
         <div style="height: 66px;">
