--- a/js/util/alipay.html
+++ b/js/util/alipay.html
@@ -13,21 +13,21 @@
     </div>
     <section ms-if="!isweixin" style="padding:68px 0;">
         <div class="bs-text-x-larger" style="line-height: 30px;">支付信息加载中，请稍候……</div>
-        <div class="bs-text-gold bs-text-large" style="padding-top: 10px;">
+        <div class="bs-text-graybs-text-large" style="padding-top: 10px;">
             正在处理支付宝请求，请您在支付宝中完成支付
         </div>
     </section>
 
     <section ms-if="isweixin" style="padding:68px 0 20px 0;">
         <div class="bs-text-x-larger" style="line-height: 30px;">支付信息加载成功</div>
-        <div class="bs-text-gold bs-text-large" style="padding-top: 10px;">
+        <div class="bs-text-graybs-text-large" style="padding-top: 10px;">
             因微信无法处理支付宝请求，请您按照以下步骤继续完成支付
         </div>
     </section>
 
     <ol ms-if="isweixin" style="border-top:1px solid #eee;margin-left: -20px;" class="bs-text-large">
         <li style="padding-top:30px;">
-            点击微信客户端右上角（三个小点）。<br><a class=" bs-text-gold bs-text-smaller" href="javascript:void(0)" ms-click="maskToggle">点击查看如何操作</a>
+            点击微信客户端右上角（三个小点）。<br><a class=" bs-text-graybs-text-smaller" href="javascript:void(0)" ms-click="maskToggle">点击查看如何操作</a>
         </li>
         <li style="padding-top:20px;">
             选择在其它浏览器中打开。苹果系统选择在“safari中打开”，安卓系统选择“在浏览器中打开”即可。
