--- a/js/util/calendar.html
+++ b/js/util/calendar.html
@@ -8,7 +8,7 @@
 }
 .modal-content-title {
     height: 48px;
-    margin: 20px 30px 10px;
+    margin: 20px 28px 10px 14px;
     text-align: right;
 }
 
@@ -26,16 +26,17 @@
 
 .changeStatusBtn {
     display: inline-block;
-    color: #169488;
+    color: #999;
     line-height: 48px;
+    font-size: 16px;
 }
 
 .changeStatusBtn:active {
-    color: #B3DFDB;
+    color: #eee;
 }
 
 .month-title {
-    font-size: 24px;
+    font-size: 20px;
     color: #444;
     text-align: left;
     border-color: #fff;
@@ -46,7 +47,7 @@
 
 .timeCalendar {
     display: flex;
-    margin-top: 30px;
+    margin-top: 35px;
     margin-bottom: 10px;
     justify-content: space-around;
     align-items: center;
@@ -114,16 +115,19 @@
 
 .nextBtn {
     display: block;
-    width: 100vw;
+    width: 87vw;
     position: absolute;
-    bottom: 0;
-    line-height: 32px;
+    bottom: 12px;
+    left: 6.5vw;
+    line-height: 44px;
     font-size: 18px;
-    background: #eee;
+    background: #f2f2f2;
     color: #444;
+    font-weight: lighter;
+    border-radius: 22px;
 }
 .nextBtn:active {
-    background: : #999;
+    background-color: #BDBDBD;
 }
 .nextBtn.disabled {
     color: #999;
@@ -132,7 +136,7 @@
 <div id="modal-text-content" ms-controller="calendar">
     <section class="modal-content-title">
         <div class="modal-close" ms-click="closeModal"></div>
-        <a href="###" class="changeStatusBtn bs-text-x-larger" ms-visible="status.key!=status.chooseType" ms-click="changeStatus">{{changeStatusBtnText}}</a>
+        <a href="###" class="changeStatusBtn" ms-visible="status.key!=status.chooseType" ms-click="changeStatus">{{changeStatusBtnText}}</a>
     </section>
     
     <!-- 模式选择 -->
@@ -170,10 +174,10 @@
         </section>
         <section class="timeCalendar">
             <a id="select_start" href="###">
-                <small class="bs-text-x-larger bs-text-444">{{startIndex==-1?'入住日期':(calendarDates[startIndex]?formatDate(calendarDates[startIndex].date):'&nbsp;')}}</small>
+                <small class="bs-text-444" style="font-size: 20px;">{{startIndex==-1?'入住日期':(calendarDates[startIndex]?formatDate(calendarDates[startIndex].date):'&nbsp;')}}</small>
             </a>
             <a id="select_end" href="###">
-                <small class="bs-text-x-larger bs-text-444">{{endIndex==-1?'退房日期':(calendarDates[endIndex]?formatDate(calendarDates[endIndex].date):'&nbsp;')}}</small>
+                <small class="bs-text-444" style="font-size: 20px;">{{endIndex==-1?'退房日期':(calendarDates[endIndex]?formatDate(calendarDates[endIndex].date):'&nbsp;')}}</small>
             </a>
         </section>
     </div>
@@ -196,7 +200,7 @@
     </div>
     
     <a href="#" class="nextBtn" ms-class="disabled: isNextBtnDisabled" ms-attr-disabled="isNextBtnDisabled" ms-visible="status.key!=status.chooseType" ms-click="goNext">
-        <div style="position: absolute;top: -24px;left: 15px;font-size: 12px;" ms-visible="status.key==status.calendar">逐时定价，越晚入住越多优惠</div>   
+        <div style="position: absolute;top: -36px;left: 43.5vw;margin-left: -78px;font-size: 12px;color: #999;" ms-visible="status.key==status.dayClock">逐时定价，越晚入住越多优惠</div> 
         {{nextBtnText}}
     </a>
 
